[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/gui.gd" type="Script" id=1]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 493.0
margin_right = 531.0
margin_bottom = 50.0

[node name="timer_label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 38.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0:00"
align = 1

[node name="money_label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 38.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "500"
align = 1

[node name="timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
